Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-api-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-api-backend
  template:
    metadata:
      labels:
        app: airflow-api-backend
    spec:
      containers:
        - name: backend
          image: your-backend-image
          ports:
            - containerPort: 3000
