service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-api-backend
spec:
  selector:
    app: airflow-api-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
